export default class Cliente {


    public agregarReserva(r: Reserva): void {
        this.reserva.push(r)
    }

}